--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="“Анализ рынка” книга о том, как сделать состояние на бирже без лишнего стресса">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
 <div class="page-wrapper">
