--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Анализ рынка с настоящими профессионалами</title>
-    <meta name="description" content="“Анализ рынка” книга о том, как сделать состояние на бирже без лишнего стресса">
+    <title>Платформа торговых сигналов. Телеграм канал аналитики</title>
+    <meta name="description" content="Анализ рынка с настоящими профессионалами">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/index.css">
