--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         gtag('config', 'UA-159125089-4');
     </script>
+    <meta name="google-site-verification" content="Ty94eB1wi2fIHBR9pTRT5J9jvcMNbj2EyFlGi3ThcEM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
