--- a/index.html
+++ b/index.html
@@ -19,27 +19,33 @@
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="canonical" href="http://ia-invite-page.cc.ua/" />
+    <meta property="og:title" content="Анализ рынка с настоящими профессионалами" />
+    <meta property="og:url" content="http://ia-invite-page.cc.ua/" />
+    <meta property="og:image" content="https://waivio.nyc3.digitaloceanspaces.com/1603975075_a00e5f43-13a2-4646-9087-b239bd6a0a76" />
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="Телеграм-канал InvestArena поможет вам приумножить прибыль и сократить риски!" />
 </head>
 <body>
-<div class="page-wrapper">
+<div itemscope itemtype="https://schema.org/FinancialProduct" class="page-wrapper">
     <div class="first-screen">
         <div class="container">
             <div class="first-screen-content">
                 <div class="first-screen-content__logo"><img src="images/logo-ia.png" alt="logo"></div>
                 <div class="first-screen-content__title">
-                    <h1>Анализ рынка с настоящими профессионалами</h1>
+                    <h1 itemprop="name">Анализ рынка с настоящими профессионалами</h1>
                 </div>
                 <div class="first-screen-content__download-block">
                     <div class="left-side">
-                        <span>Телеграм-канал InvestArena поможет вам приумножить прибыль и сократить риски!</span>
+                        <span itemprop="description">Телеграм-канал InvestArena поможет вам приумножить прибыль и сократить риски!</span>
                     </div>
                     <div class="right-side">
-                        <span>Опытные эксперты рынка докажут, что успех на бирже может быть доступен каждому.</span>
+                        <span itemprop="description">Опытные эксперты рынка докажут, что успех на бирже может быть доступен каждому.</span>
                     </div>
                 </div>
             </div>
-            <div class="button-block">
-                <a class="redirect-btn" href="https://t.me/investarena_analytics">
+            <div itemscope itemtype="http://schema.org/Offer" class="button-block">
+                <a itemprop="offeredBy" class="redirect-btn" href="https://t.me/investarena_analytics">
                     Присоединяйтесь к нашему Telegram каналу
                 </a>
             </div>
@@ -48,14 +54,14 @@
     <div class="second-screen-desktop">
         <div class="container">
             <div class="second-screen-content__title">
-                <span class="first-text">В нашем телеграм-канале вы сможете:</span>
+                <span class="first-text" itemprop="availableChannel">В нашем телеграм-канале вы сможете:</span>
             </div>
         </div>
     </div>
     <div class="second-screen-mobile">
         <div class="container">
             <div class="second-screen-content__title">
-                <span class="first-text">В нашем телеграм-канале вы сможете:</span>
+                <span class="first-text" itemprop="availableChannel">В нашем телеграм-канале вы сможете:</span>
             </div>
         </div>
         <div class="second-screen-bg-1">
@@ -66,12 +72,12 @@
         </div>
     </div>
     <div class="second-screen-footer">
-        <div class="container">
+        <div itemscope itemtype="http://schema.org/Service" class="container">
             <div class="second-screen-footer__text-block">
-                Присоединись к опытным экспертам и переходи в телеграм-канал InvestArena — получи возможность запустить механизм повышения твоего профита уже сейчас!
+                <span itemprop="offers">Присоединись к опытным экспертам и переходи в телеграм-канал InvestArena</span> — <span itemprop="award">получи возможность запустить механизм повышения твоего профита</span> уже сейчас!
             </div>
-            <div class="button-block">
-                <a class="redirect-btn" href="https://t.me/investarena_analytics">
+            <div itemprop="offers" itemscope itemtype="http://schema.org/Offer" class="button-block">
+                <a itemprop="offeredBy" class="redirect-btn" href="https://t.me/investarena_analytics">
                     Присоединяйтесь к нашему Telegram каналу
                 </a>
             </div>
