--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Платформа торговых сигналов. Телеграм канал аналитики</title>
+    <title>Телеграмм Форекс Аналитики от Инвест Арена для трейдеров</title>
     <meta name="description" content="Анализ рынка с настоящими профессионалами">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
