change title in meta tag

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/index.css">
-    <link rel="canonical" href="http://ia-invite-page.cc.ua/" />
-    <meta property="og:title" content="Анализ рынка с настоящими профессионалами" />
-    <meta property="og:url" content="http://ia-invite-page.cc.ua/" />
+    <link rel="canonical" href="https://tradingsignals.vip" />
+    <meta property="og:title" content="Телеграмм Форекс Аналитики от Инвест Арена для трейдеров" />
+    <meta property="og:url" content="https://tradingsignals.vip" />
     <meta property="og:image" content="https://waivio.nyc3.digitaloceanspaces.com/1603975075_a00e5f43-13a2-4646-9087-b239bd6a0a76" />
     <meta property="og:type" content="article" />
     <meta property="og:description" content="Телеграм-канал InvestArena поможет вам приумножить прибыль и сократить риски!" />
