add hidden element

--- a/index.html
+++ b/index.html
@@ -83,6 +83,36 @@
             </div>
         </div>
     </div>
+    <div class="hidden">
+        Телеграмм-канал InvestArena
+        Телеграмм-канал InvestArena — это сообщество экспертов, аналитиков и практикующих трейдеров. Здесь можно быстро получить полезную информацию, которая позволит получать прибыль. Форекс телеграмм-канал будет полезным как для новичков, так и опытных участников торгов.
+        Ситуация на рынке развивается стремительно. Порой для эффективной торговли трейдерам банально не хватает времени на проведение глубокого анализа. Телеграмм-канал InvestArena поможет решить эту проблему. Здесь вас ждет:
+        Аналитика Forex. На InvestArena вы узнаете о самых главных событиях, влияющих на мировые рынки. Наши эксперты детально разбирают сложившуюся ситуацию. Все главные новости вы получите в одном источнике. При этом они будут дополнены комментарием аналитика, который позволит понять как именно то, или иное событие может повлиять на котировки финансовых активов. Используя эту информацию, вы сможете оптимизировать свою торговую стратегию, сделав ее более прибыльной. Качественная аналитика Форекс — залог успеха каждого трейдера.Юлия, 14:01
+        Стратегии Форекс. Существует множество подходов к торговле на международном валютном рынке. Разобраться во всех методиках бывает крайне сложно. На InvestArena вы узнаете наиболее интересные торговые стратегии, которые уже хорошо зарекомендовали себя. Тысячи трейдеров по всему миру используют их, стабильно фиксируя Profit. Подписавшись на телеграмм-канал InvestArena, лучшие торговые практики станут доступными для вас.
+        Торговые сигналы. Готовые алгоритмы действий по конкретным финансовым активам сэкономят ваше время и деньги. Вам не придется самостоятельно сидеть часами над выработкой эффективного решения. Торговые сигналы InvestArena содержат всю необходимую информацию. Вам остается лишь действовать.
+        Бонусы. На канале регулярно проходят акции. С их помощью вы сможете получить массу приятных бонусов. Кроме того, эксперты рынка разбирают наиболее интересные предложения со стороны брокерских компаний. В результате вы получаете информацию лишь о самых актуальных и выгодных акциях.
+        InvestArena — самый быстрорастущий телеграмм-канал. Станьте его участником, и получите преимущество в торговле на международном валютном рынке.
+        Зачем нужны торговые сигналы?
+        Далеко не каждый трейдер располагает временем для кропотливого разбора ситуации на рынке. Кто-то совмещает трейдинг с другими видами деятельности. Некоторые пользователи пока еще не научились премудростями технического и фундаментального анализа. Торговые сигналы решают эту проблему. Они включают следующую информацию:
+        название актива;
+        направление сделки (SELL/BUY);
+        цена открытия сделки;
+        уровень установки Take Profit.
+        Торговый сигнал также может содержать информацию относительно новостей, на которые следует обратить внимание при заключении такой сделки. Кроме того, рассматриваются и альтернативные сценарии развития ситуации. Благодаря этому, наши торговые сигналы универсальные. Они не выглядят в виде предсказания. Торговые прогнозы рассматривают все возможные сценарии движения котировок того или иного финансового актива.
+        Какую торговую стратегию выбрать?
+        Практически каждый трейдер работает по торговой системе собственной разработки. У многих есть свои любимые технические индикаторы или приемы трейдинга. Телеграмм-канал InvestArena разбирает самые результативные стратегии. Благодаря этому, вы сможете внести правки в свою торговлю, сделав ее более эффективной. Стратегии можно разделить на несколько вариантов:
+        скальпинг;
+        торговля внутри дня;
+        среднесрочные;
+        долгосрочные.
+        Каждый вид имеет свои особенности и преимущества. На телеграмм-канале InvestArena практикующие трейдеры и эксперты разбирают разные виды торговых стратегий, акцентируя внимание на их ключевых преимуществах и недостатках. Такая информация имеет огромное значение для всех интересующихся торговлей на финансовых рынках. Она открывает широкие возможности для получения прибыли.
+        Чем важна аналитика Forex?
+        В современном мире своевременно полученная информация — залог успеха. Интернет переполнен различными материалами по рынку. Найти действительно качественную и актуальную аналитику Forex бывает крайне сложно. Именно по этой причине и был создан телеграмм-канал InvestArena. Здесь собраны только самые актуальные новости и аналитические обзоры.
+        Отличительная черта всех материалов, публикуемых на канале — возможность их прикладного применения. Они содержат элементы как технического, так и фундаментального анализа. Материалы рассчитаны на широкую аудиторию. Поэтому они изложены в четкой и понятной форме, доступной как для начинающих трейдеров, так и для профессионалов.
+        InvestArena — это мощный источник актуальной информации. Здесь вы найдете только действительно важные аналитические материалы, подготовленные настоящими знатоками финансовых рынков.
+        Какими бывают бонусы?
+        InvestArena регулярно балует своих подписчиков приятными бонусами и призами. Платформа проводит различные конкурсы, связанные с биржевой торговлей. На телеграмм-канале InvestArena вы сможете своевременно получить информацию о грядущих акциях. Благодаря этому, у вас всегда будет возможность получить приятный бонус, и быть в курсе последних новостей финансовых рынков!
+    </div>
     <footer class="page-footer">
         <div class="container">
             <div class="footer-description">Предупреждение: Торговля финансовыми инструментами является рискованным
