--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                 </div>
                 <div class="first-screen-content__download-block">
                     <div class="left-side">
-                        <span itemprop="description">Телеграм-канал InvestArena поможет вам приумножить прибыль и сократить риски!</span>
+                        <span itemprop="description">В телеграм-канале InvestArena вас ждут: интересный и полезный контент,
+                            прогнозы от аналитиков, регулярные новости, различный интерактив и многое другое.</span>
                     </div>
                     <div class="right-side">
-                        <span itemprop="description">Опытные эксперты рынка докажут, что успех на бирже может быть доступен каждому.</span>
+                        <span itemprop="description">Опытные эксперты рынка покажут, что успех на бирже может быть доступен каждому.</span>
                     </div>
                 </div>
             </div>
