add block with info and change pictures

--- a/404.html
+++ b/404.html
@@ -22,8 +22,10 @@
         <div class="first-screen-error">
             <div class="container">
                 <div class="first-screen-content first-screen-content__error">
-                    <div class="first-screen-content__logo first-screen-content__logo-error"><img src="images/logo-ia.png" alt="logo"></div>
-                    <div class="first-screen-content__button"><a href="/">На главную</a></div>
+                    <div class="first-screen-content__logo first-screen-content__logo-error"><img src="images/logo-ia.webp" alt="logo"></div>
+                    <div class="first-screen-message__wrap">
+                        <div>Такой страницы не существует.</div>
+                        <a href="https://traiding-signals-platform.pp.ua/">Главная страница</a></div>
                 </div>
             </div>
         </div>
