--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="first-screen">
         <div class="container">
             <div class="first-screen-content">
-                <div class="first-screen-content__logo"><img src="images/logo-ia.png" alt="logo"></div>
+                <div class="first-screen-content__logo"><img src="images/logo-ia.webp" alt="logo"></div>
                 <div class="first-screen-content__title">
                     <h1 itemprop="name">Анализ рынка с настоящими профессионалами</h1>
                 </div>
@@ -66,10 +66,10 @@
             </div>
         </div>
         <div class="second-screen-bg-1">
-            <img class="second-bg-800" src="images/second-screen-bg-375-1-ia.png" alt="icon-man">
+            <img class="second-bg-800" src="images/second-screen-bg-375-1-ia.webp" alt="icon-man">
         </div>
         <div class="second-screen-bg-2">
-            <img class="second-bg-800" src="images/second-screen-bg-375-2-ia.png" alt="icon-man">
+            <img class="second-bg-800" src="images/second-screen-bg-375-2-ia.webp" alt="icon-man">
         </div>
     </div>
     <div class="second-screen-footer">
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <div class="accordion-button__wrap"><button class="accordion_button">Show More</button></div>
+    <div class="accordion-button__wrap"><span class="accordion_button">Подробнее</span></div>
     <div class="accordion">
         <h1>Телеграмм-канал InvestArena</h1>
             <p>Телеграмм-канал InvestArena — это сообщество экспертов, аналитиков и практикующих трейдеров. Здесь можно быстро получить полезную информацию, которая позволит получать прибыль. Форекс телеграмм-канал будет полезным как для новичков, так и опытных участников торгов.</p>
