--- a/404.html
+++ b/404.html
@@ -9,12 +9,13 @@
 
         gtag('config', 'UA-159125089-4');
     </script>
+    <title>Телеграмм Форекс Аналитики от Инвест Арена для трейдеров</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <meta name="google-site-verification" content="Ty94eB1wi2fIHBR9pTRT5J9jvcMNbj2EyFlGi3ThcEM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
-    <title>Title</title>
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
