--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
                     <div class="first-screen-content__logo first-screen-content__logo-error"><img src="images/logo-ia.webp" alt="logo"></div>
                     <div class="first-screen-message__wrap">
                         <div>Такой страницы не существует.</div>
-                        <a href="https://traiding-signals-platform.pp.ua/">Главная страница</a></div>
+                        <a href="/">Главная страница</a></div>
                 </div>
             </div>
         </div>
