--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             } else {
                 panel.style.maxHeight = panel.scrollHeight + 'px';
             }
+            panel.scrollIntoView(true);
         });
 </script>
 </body>
