--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 
         gtag('config', 'UA-159125089-4');
     </script>
+    <script type="application/ld+json">
+        {
+            "@context" : "http://schema.org",
+            "@type" : "FinancialProduct",
+            "name" : "InvestArena",
+            "url" : "https://tradingsignals.vip/",
+            "sameAs" : [
+                "https://vk.com/investarena_analytics",
+                "https://www.facebook.com/InvestArena-106469821276880"
+            ]
+        }
+    </script>
     <meta name="google-site-verification" content="Ty94eB1wi2fIHBR9pTRT5J9jvcMNbj2EyFlGi3ThcEM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
