add social links

--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
         <h2>Какими бывают бонусы?</h2>
         <p>InvestArena регулярно балует своих подписчиков приятными бонусами и призами. Платформа проводит различные конкурсы, связанные с биржевой торговлей. На телеграмм-канале InvestArena вы сможете своевременно получить информацию о грядущих акциях. Благодаря этому, у вас всегда будет возможность получить приятный бонус, и быть в курсе последних новостей финансовых рынков!</p>
     </div>
+    <a href="https://www.facebook.com/InvestArena-106469821276880" class="hidden">Facebook</a>
+    <a href="https://vk.com/investarena_analytics" class="hidden">VK</a>
     <footer class="page-footer">
         <div class="container">
             <div class="footer-description">Предупреждение: Торговля финансовыми инструментами является рискованным
