--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/index.css">
-    <link rel="canonical" href="https://tradingsignals.vip" />
+    <link rel="canonical" href="https://tradingsignals.vip/" />
     <meta property="og:title" content="Телеграмм Форекс Аналитики от Инвест Арена для трейдеров" />
     <meta property="og:url" content="https://tradingsignals.vip" />
     <meta property="og:image" content="https://waivio.nyc3.digitaloceanspaces.com/1603975075_a00e5f43-13a2-4646-9087-b239bd6a0a76" />
