fix resources that block display content

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159125089-4"></script>
-    <script>
+    <script async defer>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-159125089-4');
     </script>
-    <script type="application/ld+json">
+    <script async defer type="application/ld+json">
         {
             "@context" : "http://schema.org",
             "@type" : "FinancialProduct",
@@ -31,7 +31,7 @@
     <meta name="description" content="Анализ рынка с настоящими профессионалами">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css" disabled>
     <link rel="canonical" href="https://tradingsignals.vip/" />
     <meta property="og:title" content="Телеграмм Форекс Аналитики от Инвест Арена для трейдеров" />
     <meta property="og:url" content="https://tradingsignals.vip" />
