--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159125089-4"></script>
-    <script>
+    <script async defer>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-159125089-4');
     </script>
-    <script type="application/ld+json">
+    <script async defer type="application/ld+json">
         {
             "@context" : "http://schema.org",
             "@type" : "FinancialProduct",
