--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="description" content="Анализ рынка с настоящими профессионалами">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/index.css" disabled>
+    <link rel="stylesheet" href="./styles/index.css">
     <link rel="canonical" href="https://tradingsignals.vip/" />
     <meta property="og:title" content="Телеграмм Форекс Аналитики от Инвест Арена для трейдеров" />
     <meta property="og:url" content="https://tradingsignals.vip" />
