--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-Ru">
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159125089-4"></script>
-    <script>
+    <script async defer>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
@@ -16,6 +16,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/mobile-styles.css" media="screen and (min-width: 400px)">
+    <link rel="stylesheet" href="./styles/tablet-styles.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="./styles/desktop-styles.css" media="screen and (min-width: 1200px)">
 </head>
 <body>
     <div class="page-wrapper">
