--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru-Ru">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159125089-4"></script>
@@ -32,6 +32,9 @@
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/mobile-styles.css" media="screen and (min-width: 400px)">
+    <link rel="stylesheet" href="./styles/tablet-styles.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="./styles/desktop-styles.css" media="screen and (min-width: 1200px)">
     <link rel="canonical" href="https://tradingsignals.vip/" />
     <meta property="og:title" content="Телеграмм Форекс Аналитики от Инвест Арена для трейдеров" />
     <meta property="og:url" content="https://tradingsignals.vip" />
@@ -148,7 +151,7 @@
         </div>
     </footer>
 </div>
-<script>
+<script async defer>
     let acc = document.querySelector('.accordion_button');
         acc.addEventListener('click', function() {
             let panel = document.querySelector('.accordion');
