--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     <meta name="description" content="Анализ рынка с настоящими профессионалами">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/mobile-styles.css" media="screen and (min-width: 400px)">
-    <link rel="stylesheet" href="./styles/tablet-styles.css" media="screen and (min-width: 768px)">
-    <link rel="stylesheet" href="./styles/desktop-styles.css" media="screen and (min-width: 1200px)">
+<!--    <link rel="stylesheet" href="./styles/index.css">-->
+    <link rel="preload" href="./styles/index.css" as="style">
+    <link rel="preload" href="./styles/mobile-styles.css" media="screen and (min-width: 400px)" as="style">
+    <link rel="preload" href="./styles/tablet-styles.css" media="screen and (min-width: 768px)" as="style">
+    <link rel="preload" href="./styles/desktop-styles.css" media="screen and (min-width: 1200px)" as="style">
     <link rel="canonical" href="https://tradingsignals.vip/" />
     <meta property="og:title" content="Телеграмм Форекс Аналитики от Инвест Арена для трейдеров" />
     <meta property="og:url" content="https://tradingsignals.vip" />
