--- a/404.html
+++ b/404.html
@@ -15,10 +15,10 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/mobile-styles.css" media="screen and (min-width: 400px)">
-    <link rel="stylesheet" href="./styles/tablet-styles.css" media="screen and (min-width: 768px)">
-    <link rel="stylesheet" href="./styles/desktop-styles.css" media="screen and (min-width: 1200px)">
+    <link rel="preload" href="./styles/index.css" as="style">
+    <link rel="preload" href="./styles/mobile-styles.css" media="screen and (min-width: 400px)" as="style">
+    <link rel="preload" href="./styles/tablet-styles.css" media="screen and (min-width: 768px)" as="style">
+    <link rel="preload" href="./styles/desktop-styles.css" media="screen and (min-width: 1200px)" as="style">
 </head>
 <body>
     <div class="page-wrapper">
